# nexus-router-adapter-http

./: .gitignore  CHANGELOG.md  README.es.md  README.fr.md  README.hi.md  README.it.md  README.ja.md  README.md  README.pt-BR.md  README.zh.md  SCORECARD.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
site/: astro.config.mjs
site/src/: site-config.ts
site/src/content/docs/handbook/: configuration.md  getting-started.md  index.md  protocol.md
src/nexus_router_adapter_http/: __init__.py
tests/: test_http_adapter.py
